--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -19,9 +19,17 @@ jobs:
       with:
         test-name: Compile
         setup-command: ''
-        command: g++ -std=c++17 -Wall -Werror lab-1-part-b.cpp Student.cpp -o main
+        command: g++ -std=c++17 -Wall -Werror lab01-part-b.cpp Student.cpp -o main
         timeout: 10
         max-score: 5
+    - name: All students present
+        id: all-students-present
+        uses: classroom-resources/autograding-command-grader@v1
+        with:
+          test-name: All students present
+          command: ./check.sh
+          timeout: 10
+          max-score: 10
     - name: All students valid ages
       id: all-students-valid-ages
       uses: classroom-resources/autograding-io-grader@v1
